--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -335,6 +335,11 @@ config WAKEUP_IRQ_DEBUG
 	  This enables debug information about wakeup interrupts using
 	  sysfs (/sys/kernel/).
 
+config PM_SYNC_BEFORE_SUSPEND
+	bool "Sync file systems before suspend"
+	depends on PM
+	default y
+
 config QUICK_WAKEUP
 	bool "Quick wakeup"
 	depends on SUSPEND
