Disabled some unneeded things

--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -595,3 +595,16 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_STRICT_MEMORY_RWX=y
+
+# Disable unwanted things
+CONFIG_SECURITY_SONY_RIC=n
+# CONFIG_DM_VERITY is not set
+# CONFIG_CORESIGHT is not set
+
+# SELinux
+CONFIG_SECURITY_SELINUX_BOOTPARAM_VALUE=1
+CONFIG_SECURITY_SELINUX_DISABLE=y
+CONFIG_SECURITY_SELINUX_DEVELOP=y
+CONFIG_SECURITY_SELINUX_AVC_STATS=y
+# CONFIG_SECURITY_SELINUX_AVC_EXTRA_INFO is not set
+# CONFIG_SECURITY_SELINUX_TRAP is not set
