--- a/drivers/pci/Kconfig
+++ b/drivers/pci/Kconfig
@@ -7,7 +7,7 @@ config ARCH_SUPPORTS_MSI
 config PCI_MSI
 	bool "Message Signaled Interrupts (MSI and MSI-X)"
 	depends on PCI
-	depends on ARCH_SUPPORTS_MSI
+	depends on ARCH_SUPPORTS_MSI || ARCH_MSM
 	help
 	   This allows device drivers to enable MSI (Message Signaled
 	   Interrupts).  Message Signaled Interrupts enable a device to
