--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -608,3 +608,18 @@ CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 # CONFIG_SECURITY_SELINUX_AVC_EXTRA_INFO is not set
 # CONFIG_SECURITY_SELINUX_TRAP is not set
+
+CONFIG_CPU_QUIET=y
+CONFIG_CPU_QUIET_STATS=y
+CONFIG_CPU_QUIET_GOVERNOR_BALANCED=n
+CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE=n
+CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=n
+CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
+CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
+
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
+
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
