defconfig: Build modules inline and update

--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -600,6 +600,20 @@ CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_SECURITY_SONY_RIC=n
 # CONFIG_DM_VERITY is not set
 # CONFIG_CORESIGHT is not set
+# CONFIG_SCSI_UFS_TEST is not set
+# CONFIG_SPI_SPIDEV is not set
+# CONFIG_USB_GSPCA is not set
+# CONFIG_MMC_TEST is not set
+# CONFIG_MSM_BUSPM_DEV is not set
+
+# Build module inline
+CONFIG_WIL6210=y
+CONFIG_INPUT_GPIO=y
+CONFIG_DVB_MPQ=y
+CONFIG_DVB_MPQ_DEMUX=y
+CONFIG_TSPP=y
+CONFIG_MOBICORE_SUPPORT=y
+CONFIG_MOBICORE_API=y
 
 # SELinux
 CONFIG_SECURITY_SELINUX_BOOTPARAM_VALUE=1
