defconfig: Disabled CPUQUIET

--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -623,8 +623,8 @@ CONFIG_SECURITY_SELINUX_AVC_STATS=y
 # CONFIG_SECURITY_SELINUX_AVC_EXTRA_INFO is not set
 # CONFIG_SECURITY_SELINUX_TRAP is not set
 
-CONFIG_CPU_QUIET=y
-CONFIG_CPU_QUIET_STATS=y
+CONFIG_CPU_QUIET=n
+CONFIG_CPU_QUIET_STATS=n
 CONFIG_CPU_QUIET_GOVERNOR_BALANCED=n
 CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE=n
 CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=n
