--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -601,6 +601,7 @@ CONFIG_STRICT_MEMORY_RWX=y
 ##########################
 
 CONFIG_LOCALVERSION="-v4"
+CONFIG_LOCALVERSION_AUTO=n
 
 # Disable unwanted things
 CONFIG_SECURITY_SONY_RIC=n
