defconfig: Enable NTFS

--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -644,6 +644,8 @@ CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
 
 CONFIG_DYNAMIC_FSYNC=y
+CONFIG_NTFS_FS=y
+CONFIG_NTFS_RW=y
 
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
