--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -630,11 +630,11 @@ CONFIG_SECURITY_SELINUX_AVC_STATS=y
 # CONFIG_SECURITY_SELINUX_AVC_EXTRA_INFO is not set
 # CONFIG_SECURITY_SELINUX_TRAP is not set
 
-CONFIG_CPU_QUIET=n
+CONFIG_CPU_QUIET=y
 CONFIG_CPU_QUIET_STATS=n
 CONFIG_CPU_QUIET_GOVERNOR_BALANCED=n
 CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE=n
-CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=n
+CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=y
 CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
 CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
 
@@ -647,9 +647,11 @@ CONFIG_DYNAMIC_FSYNC=y
 CONFIG_NTFS_FS=y
 CONFIG_NTFS_RW=y
 
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 # CONFIG_CPU_IDLE_GOV_LADDER is not set
 # CONFIG_CPU_IDLE_GOV_MENU is not set
 CONFIG_CPU_IDLE_GOV_NULL=y
+
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
