--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -595,3 +595,63 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_STRICT_MEMORY_RWX=y
+
+##########################
+#### AndroPlus Kernel ####
+##########################
+
+CONFIG_LOCALVERSION="-v6"
+CONFIG_LOCALVERSION_AUTO=n
+
+# Disable unwanted things
+CONFIG_SECURITY_SONY_RIC=n
+# CONFIG_DM_VERITY is not set
+# CONFIG_CORESIGHT is not set
+# CONFIG_SCSI_UFS_TEST is not set
+# CONFIG_SPI_SPIDEV is not set
+# CONFIG_USB_GSPCA is not set
+# CONFIG_MMC_TEST is not set
+# CONFIG_MSM_BUSPM_DEV is not set
+
+# Build module inline
+CONFIG_WIL6210=y
+CONFIG_INPUT_GPIO=y
+CONFIG_DVB_MPQ=y
+CONFIG_DVB_MPQ_DEMUX=y
+CONFIG_TSPP=y
+CONFIG_MOBICORE_SUPPORT=y
+CONFIG_MOBICORE_API=y
+
+# SELinux
+CONFIG_SECURITY_SELINUX_BOOTPARAM_VALUE=1
+CONFIG_SECURITY_SELINUX_DISABLE=y
+CONFIG_SECURITY_SELINUX_DEVELOP=y
+CONFIG_SECURITY_SELINUX_AVC_STATS=y
+# CONFIG_SECURITY_SELINUX_AVC_EXTRA_INFO is not set
+# CONFIG_SECURITY_SELINUX_TRAP is not set
+
+CONFIG_CPU_QUIET=y
+CONFIG_CPU_QUIET_STATS=n
+CONFIG_CPU_QUIET_GOVERNOR_BALANCED=n
+CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE=n
+CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=y
+CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
+CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
+
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
+
+CONFIG_DYNAMIC_FSYNC=y
+CONFIG_NTFS_FS=y
+CONFIG_NTFS_RW=y
+
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+# CONFIG_CPU_IDLE_GOV_LADDER is not set
+# CONFIG_CPU_IDLE_GOV_MENU is not set
+CONFIG_CPU_IDLE_GOV_NULL=y
+
+CONFIG_BALANCE_ANON_FILE_RECLAIM=y
