--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -653,5 +653,6 @@ CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 # CONFIG_CPU_IDLE_GOV_LADDER is not set
 # CONFIG_CPU_IDLE_GOV_MENU is not set
 CONFIG_CPU_IDLE_GOV_NULL=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
