--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -600,7 +600,7 @@ CONFIG_STRICT_MEMORY_RWX=y
 #### AndroPlus Kernel ####
 ##########################
 
-CONFIG_LOCALVERSION="-v7.2"
+CONFIG_LOCALVERSION="-v8"
 CONFIG_LOCALVERSION_AUTO=n
 
 # Disable unwanted things
@@ -656,3 +656,4 @@ CONFIG_CPU_IDLE_GOV_NULL=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
+CONFIG_QUICK_WAKEUP=y
