defconfig: disable PM_SYNC_BEFORE_SUSPEND

--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -657,3 +657,4 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_QUICK_WAKEUP=y
+# CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
