--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -630,6 +630,7 @@ CONFIG_SECURITY_SELINUX_AVC_STATS=y
 # CONFIG_SECURITY_SELINUX_AVC_EXTRA_INFO is not set
 # CONFIG_SECURITY_SELINUX_TRAP is not set
 
+# CPU
 CONFIG_CPU_QUIET=y
 CONFIG_CPU_QUIET_STATS=n
 CONFIG_CPU_QUIET_GOVERNOR_BALANCED=n
@@ -638,22 +639,32 @@ CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=y
 CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
 CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
 
-CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_DEFAULT_WESTWOOD=y
-CONFIG_DEFAULT_TCP_CONG="westwood"
-
-CONFIG_DYNAMIC_FSYNC=y
-CONFIG_NTFS_FS=y
-CONFIG_NTFS_RW=y
-
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 # CONFIG_CPU_IDLE_GOV_LADDER is not set
 # CONFIG_CPU_IDLE_GOV_MENU is not set
 CONFIG_CPU_IDLE_GOV_NULL=y
+
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+
+# I/O scheduler 
+CONFIG_IOSCHED_BFQ=y
+# CONFIG_CGROUP_BFQIO is not set
+# CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_BFQ=y
+CONFIG_DEFAULT_IOSCHED="bfq"
+
+# TCP Algorithms
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
+
+# Misc
+CONFIG_DYNAMIC_FSYNC=y
+CONFIG_NTFS_FS=y
+CONFIG_NTFS_RW=y
 
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_QUICK_WAKEUP=y
