--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -669,3 +669,9 @@ CONFIG_NTFS_RW=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_QUICK_WAKEUP=y
 # CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
+CONFIG_ARCH_SUPPORTS_MSI=y
+CONFIG_ARCH_THREAD_INFO_ALLOCATOR=y
+
+# CONFIG_CPU_IDLE_GOV_LADDER is not set
+# CONFIG_CPU_IDLE_GOV_MENU is not set
+CONFIG_CPU_IDLE_GOV_NULL=y
