--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -642,6 +642,7 @@ CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 # CONFIG_CPU_IDLE_GOV_LADDER is not set
 # CONFIG_CPU_IDLE_GOV_MENU is not set
 CONFIG_CPU_IDLE_GOV_NULL=y
