--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -676,3 +676,6 @@ CONFIG_ARCH_THREAD_INFO_ALLOCATOR=y
 # CONFIG_CPU_IDLE_GOV_LADDER is not set
 # CONFIG_CPU_IDLE_GOV_MENU is not set
 CONFIG_CPU_IDLE_GOV_NULL=y
+
+CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS=y
+CONFIG_IOMMU_FORCE_4K_MAPPINGS=y
