defconfig: Enabled pstore
last_log is saved as /sys/fs/pstore/console-ramoops

--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -679,3 +679,8 @@ CONFIG_CPU_IDLE_GOV_NULL=y
 
 CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS=y
 CONFIG_IOMMU_FORCE_4K_MAPPINGS=y
+
+CONFIG_PSTORE=y
+CONFIG_PSTORE_CONSOLE=y
+CONFIG_PSTORE_RAM=y
+CONFIG_BLK_DEV_RAM_SIZE=8192
