--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,14 @@ devicetable-offsets.h
 
 .tmp_vmlinux1
 .tmp_vmlinux2
+
+scripts/kconfig/conf
+scripts/kconfig/conf.o
+scripts/kconfig/lex.zconf.c
+scripts/kconfig/lkc_defs.h
+scripts/kconfig/mconf
+scripts/kconfig/nconf
+scripts/kconfig/zconf.hash.c
+scripts/kconfig/zconf.tab.c
+scripts/kconfig/*.o
+scripts/kconfig/lxdialog/*.o
