--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -632,12 +632,9 @@ CONFIG_SECURITY_SELINUX_AVC_STATS=y
 
 # CPU
 CONFIG_CPU_QUIET=y
-CONFIG_CPU_QUIET_STATS=n
-CONFIG_CPU_QUIET_GOVERNOR_BALANCED=n
-CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE=n
-CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=y
-CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
+CONFIG_CPU_QUIET_STATS=y
 CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
+CONFIG_CPU_QUIET_MSM=y
 
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
@@ -648,6 +645,7 @@ CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_IDLE_GOV_NULL=y
 
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_THUNDERPLUG_CONTROL=n
 
 # I/O scheduler 
 CONFIG_IOSCHED_BFQ=y
