--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -631,7 +631,7 @@ CONFIG_SECURITY_SELINUX_AVC_STATS=y
 # CONFIG_SECURITY_SELINUX_TRAP is not set
 
 # CPU
-CONFIG_CPU_QUIET=y
+CONFIG_CPU_QUIET=n
 CONFIG_CPU_QUIET_STATS=y
 CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
 CONFIG_CPU_QUIET_MSM=y
@@ -645,7 +645,6 @@ CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_IDLE_GOV_NULL=y
 
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
-CONFIG_THUNDERPLUG_CONTROL=n
 
 # I/O scheduler 
 CONFIG_IOSCHED_BFQ=y
