--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -681,3 +681,6 @@ CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
+
+CONFIG_KEXEC=n
+CONFIG_KEXEC_HARDBOOT=n
