--- a/arch/arm64/configs/kitakami_defconfig
+++ b/arch/arm64/configs/kitakami_defconfig
@@ -665,7 +665,7 @@ CONFIG_NTFS_FS=y
 CONFIG_NTFS_RW=y
 
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
-CONFIG_QUICK_WAKEUP=y
+CONFIG_QUICK_WAKEUP=n
 # CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
 CONFIG_ARCH_SUPPORTS_MSI=y
 CONFIG_ARCH_THREAD_INFO_ALLOCATOR=y
@@ -674,8 +674,8 @@ CONFIG_ARCH_THREAD_INFO_ALLOCATOR=y
 # CONFIG_CPU_IDLE_GOV_MENU is not set
 CONFIG_CPU_IDLE_GOV_NULL=y
 
-CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS=y
-CONFIG_IOMMU_FORCE_4K_MAPPINGS=y
+CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS=n
+CONFIG_IOMMU_FORCE_4K_MAPPINGS=n
 
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
