--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,7 @@ arch/arm64/boot/Image
 arch/arm/boot/compressed/vmlinux
 arch/arm/boot/zImage
 
+Image
 
 arch/arm/boot/Image
 arch/arm/boot/compressed/ashldi3.S
@@ -148,3 +149,14 @@ devicetable-offsets.h
 
 .tmp_vmlinux1
 .tmp_vmlinux2
+
+scripts/kconfig/conf
+scripts/kconfig/conf.o
+scripts/kconfig/lex.zconf.c
+scripts/kconfig/lkc_defs.h
+scripts/kconfig/mconf
+scripts/kconfig/nconf
+scripts/kconfig/zconf.hash.c
+scripts/kconfig/zconf.tab.c
+scripts/kconfig/*.o
+scripts/kconfig/lxdialog/*.o
